--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,8 +11,10 @@
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 	<!-- CSS Stylesheets -->
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 	<link rel="stylesheet" href="/css/style.css">
+
+	<!-- Client Side JS -->
+	<script defer src="script.js"></script>
 
 	<title>Pollster</title>
 </head>
