Update Stats component

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="/css/style.css">
 
 	<!-- Client Side JS -->
-	<script defer src="script.js"></script>
+	<script defer src="/script.js"></script>
 
 	<title>Pollster</title>
 </head>
